--- a/form.html
+++ b/form.html
@@ -30,6 +30,37 @@
                         </div>
                         <div class="my-3">
 
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="my-3">
+
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="my-3">
+
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="my-3">
+
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="my-3">
+
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+                        <div class="my-3">
+
+                            <label class="text-light">Email</label>
+                            <input type="text" class="form-control"/>
+                        </div>
+
+                        <div class="my-3">
+
                             <label class="text-light">Password</label>
                             <input type="password" class="form-control"/>
                         </div>
@@ -38,15 +69,7 @@
                             <label class="text-light">Address</label>
                             <textarea class="form-control"></textarea>
                         </div>
-                        <div class="my-3">
-
-                            <label class="text-light">City</label>
-                            <select class="form-control">
-                                <option>Select</option>
-                                <option>Indore</option>
-                                <option>Mumbai</option>
-                            </select>
-                        </div>
+                        
                         <div class="my-3">
 
                             <label class="text-light">Gender</label>
