--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facere itaque nam quo animi praesentium a esse odio omnis minima neque dolorum, sapiente pariatur laudantium, non ut eligendi nihil harum!</p>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/plugins.js"></script>
