--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <body>
     <div id="root"></div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem facere itaque nam quo animi praesentium a esse odio omnis minima neque dolorum, sapiente pariatur laudantium, non ut eligendi nihil harum!</p>
+    <h1>james</h1>
     <script type="module" src="/src/main.jsx"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/plugins.js"></script>
